--- a/src/rpart/201_ComparandoModelos.ipynb
+++ b/src/rpart/201_ComparandoModelos.ipynb
@@ -7,11 +7,11 @@
       "include_colab_link": true
     },
     "kernelspec": {
-      "name": "ir",
-      "display_name": "R"
+      "name": "python3",
+      "display_name": "Python 3"
     },
     "language_info": {
-      "name": "R"
+      "name": "python"
     }
   },
   "cells": [
@@ -81,10 +81,22 @@
         "drive.mount('/content/.drive')"
       ],
       "metadata": {
-        "id": "ilEZ-bE2VybW"
+        "id": "ilEZ-bE2VybW",
+        "outputId": "29a56668-dc7d-4844-c8d0-3f1d3c335333",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/.drive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -135,10 +147,42 @@
         "fi\n"
       ],
       "metadata": {
-        "id": "W8dQFI5QYCFa"
+        "id": "W8dQFI5QYCFa",
+        "outputId": "47140152-0a50-4578-c0b2-d5e7fdc3fb66",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cp: cannot stat '/content/buckets/b1/kaggle/kaggle.json': No such file or directory\n",
+            "chmod: cannot access '/root/.kaggle/kaggle.json': No such file or directory\n",
+            "--2025-10-12 15:46:45--  https://storage.googleapis.com/open-courses/austral2025-af91/dataset_pequeno.csv\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 142.250.153.207, 142.250.145.207, 74.125.128.207, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|142.250.153.207|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 168083585 (160M) [text/csv]\n",
+            "Saving to: ‘/content/buckets/b1/datasets/dataset_pequeno.csv’\n",
+            "\n",
+            "/content/buckets/b1 100%[===================>] 160.30M  39.0MB/s    in 4.8s    \n",
+            "\n",
+            "2025-10-12 15:46:50 (33.2 MB/s) - ‘/content/buckets/b1/datasets/dataset_pequeno.csv’ saved [168083585/168083585]\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -294,7 +338,7 @@
       "cell_type": "code",
       "source": [
         "PARAM <- list()\n",
-        "PARAM$semilla <- 102191  # aqui debe ir su primer semilla\n",
+        "PARAM$semilla <- 533317  # aqui debe ir su primer semilla\n",
         "PARAM$training_pct <- 70L  # entre  1L y 99L\n",
         "\n",
         "PARAM$rpart <- list (\n",
