Se creó con Colab

--- a/src/rpart/201_ComparandoModelos.ipynb
+++ b/src/rpart/201_ComparandoModelos.ipynb
@@ -81,22 +81,10 @@
         "drive.mount('/content/.drive')"
       ],
       "metadata": {
-        "id": "ilEZ-bE2VybW",
-        "outputId": "29a56668-dc7d-4844-c8d0-3f1d3c335333",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "ilEZ-bE2VybW"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/.drive\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -147,42 +135,10 @@
         "fi\n"
       ],
       "metadata": {
-        "id": "W8dQFI5QYCFa",
-        "outputId": "47140152-0a50-4578-c0b2-d5e7fdc3fb66",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "W8dQFI5QYCFa"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "cp: cannot stat '/content/buckets/b1/kaggle/kaggle.json': No such file or directory\n",
-            "chmod: cannot access '/root/.kaggle/kaggle.json': No such file or directory\n",
-            "--2025-10-12 15:46:45--  https://storage.googleapis.com/open-courses/austral2025-af91/dataset_pequeno.csv\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 142.250.153.207, 142.250.145.207, 74.125.128.207, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|142.250.153.207|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 168083585 (160M) [text/csv]\n",
-            "Saving to: ‘/content/buckets/b1/datasets/dataset_pequeno.csv’\n",
-            "\n",
-            "/content/buckets/b1 100%[===================>] 160.30M  39.0MB/s    in 4.8s    \n",
-            "\n",
-            "2025-10-12 15:46:50 (33.2 MB/s) - ‘/content/buckets/b1/datasets/dataset_pequeno.csv’ saved [168083585/168083585]\n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": []
-          },
-          "metadata": {},
-          "execution_count": 2
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -732,7 +688,7 @@
       "cell_type": "code",
       "source": [
         "PARAM <- list()\n",
-        "PARAM$semillas <- c(102191, 200177, 410551, 552581, 892237)  # aqui debe ir sus CINCO\n",
+        "PARAM$semillas <- c(533317, 566701, 599629, 633001,666559)  # aqui debe ir sus CINCO\n",
         "PARAM$training_pct <- 70L  # entre  1L y 99L\n",
         "\n",
         "PARAM$rpart <- list (\n",
@@ -1135,7 +1091,7 @@
       "cell_type": "code",
       "source": [
         "PARAM <- list()\n",
-        "PARAM$semilla_primigenia <- 102191\n",
+        "PARAM$semilla_primigenia <- 533317\n",
         "PARAM$qsemillas <- 50\n",
         "PARAM$training_pct <- 70L  # entre  1L y 99L\n",
         "\n",
@@ -1570,7 +1526,7 @@
       "cell_type": "code",
       "source": [
         "PARAM <- list()\n",
-        "PARAM$semilla_primigenia <- 102191\n",
+        "PARAM$semilla_primigenia <- 533317\n",
         "PARAM$qsemillas <- 20\n",
         "PARAM$training_pct <- 70L     # entre 1 y 100\n"
       ],
