--- a/src/ensembles/440_RandomForest.ipynb
+++ b/src/ensembles/440_RandomForest.ipynb
@@ -136,11 +136,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "9LpZCst5a7Zs"
+        "id": "9LpZCst5a7Zs",
+        "outputId": "4773a408-91b1-491d-e362-f0a33d7847ff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/.drive\n"
+          ]
+        }
+      ],
       "source": [
         "# primero establecer el Runtime de Python 3\n",
         "from google.colab import drive\n",
@@ -164,11 +176,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "XWLelftXa7Zt"
+        "id": "XWLelftXa7Zt",
+        "outputId": "3a27176e-b5cf-40a2-a6db-e92d3eb62bba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ],
       "source": [
         "%%shell\n",
         "\n",
@@ -243,18 +268,69 @@
         "format(Sys.time(), \"%a %b %d %X %Y\")"
       ],
       "metadata": {
-        "id": "54xgC6vpObNA"
+        "id": "54xgC6vpObNA",
+        "outputId": "54628e9a-ee8d-46e3-f9af-eab462326e5c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "'Wed Oct 29 12:14:28 AM 2025'"
+            ],
+            "text/markdown": "'Wed Oct 29 12:14:28 AM 2025'",
+            "text/latex": "'Wed Oct 29 12:14:28 AM 2025'",
+            "text/plain": [
+              "[1] \"Wed Oct 29 12:14:28 AM 2025\""
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "1iE0U4_WCPRT"
+        "id": "1iE0U4_WCPRT",
+        "outputId": "4a0270ef-2e19-4249-c0b2-26de2fd63473",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<table class=\"dataframe\">\n",
+              "<caption>A matrix: 2 × 6 of type dbl</caption>\n",
+              "<thead>\n",
+              "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 660381</td><td>35.3</td><td>1454471</td><td>77.7</td><td>1454471</td><td>77.7</td></tr>\n",
+              "\t<tr><th scope=row>Vcells</th><td>1226627</td><td> 9.4</td><td>8388608</td><td>64.0</td><td>1975128</td><td>15.1</td></tr>\n",
+              "</tbody>\n",
+              "</table>\n"
+            ],
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  660381 | 35.3 | 1454471 | 77.7 | 1454471 | 77.7 |\n| Vcells | 1226627 |  9.4 | 8388608 | 64.0 | 1975128 | 15.1 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  660381 & 35.3 & 1454471 & 77.7 & 1454471 & 77.7\\\\\n\tVcells & 1226627 &  9.4 & 8388608 & 64.0 & 1975128 & 15.1\\\\\n\\end{tabular}\n",
+            "text/plain": [
+              "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
+              "Ncells  660381 35.3 1454471    77.7 1454471  77.7\n",
+              "Vcells 1226627  9.4 8388608    64.0 1975128  15.1"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
         "# limpio la memoria\n",
         "rm(list=ls(all.names=TRUE)) # remove all objects\n",
@@ -305,7 +381,7 @@
       "source": [
         "PARAM <- list()\n",
         "PARAM$experimento <- 440\n",
-        "PARAM$semilla_primigenia <- 102191\n",
+        "PARAM$semilla_primigenia <- 533317 #102191\n",
         "\n",
         "PARAM$ranger$num.trees <- 300 # cantidad de arboles\n",
         "PARAM$ranger$mtry <- 13 # cantidad de atributos que participan en cada split\n",
@@ -315,7 +391,7 @@
       "metadata": {
         "id": "peRH7ySLCPRV"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -330,7 +406,7 @@
       "metadata": {
         "id": "1gZD6ZMvCPRV"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -340,10 +416,24 @@
         "dataset <- fread(\"/content/datasets/dataset_pequeno.csv\")"
       ],
       "metadata": {
-        "id": "Xi0emX2ECPRV"
+        "id": "Xi0emX2ECPRV",
+        "outputId": "0a6a679b-9be7-4abf-f747-de33a7cd30ef",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ERROR",
+          "evalue": "Error in fread(\"/content/datasets/dataset_pequeno.csv\"): could not find function \"fread\"\n",
+          "traceback": [
+            "Error in fread(\"/content/datasets/dataset_pequeno.csv\"): could not find function \"fread\"\nTraceback:\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -652,7 +742,7 @@
       "source": [
         "PARAM <- list()\n",
         "PARAM$experimento <- 450\n",
-        "PARAM$semilla_primigenia <- 102191\n",
+        "PARAM$semilla_primigenia <- 102191 #533317\n",
         "\n",
         "PARAM$hyperparametertuning$iteraciones <- 100\n",
         "PARAM$hyperparametertuning$xval_folds <- 5\n",
