Se creó con Colab

--- a/src/workflows/610_0001.ipynb
+++ b/src/workflows/610_0001.ipynb
@@ -73,13 +73,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "9LpZCst5a7Zs",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "be4e02df-987d-4e65-9408-03266b745b70"
+        "outputId": "59a4ba4c-0beb-4aea-f1a0-7dbc597c36a4"
       },
       "outputs": [
         {
@@ -116,13 +116,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "XWLelftXa7Zt",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a488e50f-d0f0-4219-8bf3-10fd4124349e"
+        "outputId": "859bcb60-10cb-404d-9b4a-573afab1e280"
       },
       "outputs": [
         {
@@ -233,21 +233,21 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "d8eae6f5-3db6-4e19-fc51-8be8a1ae9a4a"
+        "outputId": "7e370c3a-a17d-4b33-cde7-6d92cb513b3e"
       },
       "id": "EL8wdHaUs59K",
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "'Tue Nov 18 06:23:55 PM 2025'"
+              "'Thu Nov 20 12:44:06 PM 2025'"
             ],
-            "text/markdown": "'Tue Nov 18 06:23:55 PM 2025'",
-            "text/latex": "'Tue Nov 18 06:23:55 PM 2025'",
+            "text/markdown": "'Thu Nov 20 12:44:06 PM 2025'",
+            "text/latex": "'Thu Nov 20 12:44:06 PM 2025'",
             "text/plain": [
-              "[1] \"Tue Nov 18 06:23:55 PM 2025\""
+              "[1] \"Thu Nov 20 12:44:06 PM 2025\""
             ]
           },
           "metadata": {}
@@ -256,14 +256,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "id": "1iE0U4_WCPRT",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 129
         },
-        "outputId": "37bf4500-3320-4fe0-c317-9f3b4ccfb721"
+        "outputId": "4528d461-f3ac-4c42-c652-11f0f03bda51"
       },
       "outputs": [
         {
@@ -276,17 +276,17 @@
               "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "\t<tr><th scope=row>Ncells</th><td> 2678684</td><td>143.1</td><td>  6915854</td><td>369.4</td><td>  6915854</td><td> 369.4</td></tr>\n",
-              "\t<tr><th scope=row>Vcells</th><td>26151489</td><td>199.6</td><td>124099104</td><td>946.9</td><td>153060810</td><td>1167.8</td></tr>\n",
+              "\t<tr><th scope=row>Ncells</th><td>2742604</td><td>146.5</td><td>  5409494</td><td>288.9</td><td>  5409494</td><td>288.9</td></tr>\n",
+              "\t<tr><th scope=row>Vcells</th><td>6616037</td><td> 50.5</td><td>104655852</td><td>798.5</td><td>130619277</td><td>996.6</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ],
-            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells |  2678684 | 143.1 |   6915854 | 369.4 |   6915854 |  369.4 |\n| Vcells | 26151489 | 199.6 | 124099104 | 946.9 | 153060810 | 1167.8 |\n\n",
-            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells &  2678684 & 143.1 &   6915854 & 369.4 &   6915854 &  369.4\\\\\n\tVcells & 26151489 & 199.6 & 124099104 & 946.9 & 153060810 & 1167.8\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA matrix: 2 × 6 of type dbl\n\n| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n|---|---|---|---|---|---|---|\n| Ncells | 2742604 | 146.5 |   5409494 | 288.9 |   5409494 | 288.9 |\n| Vcells | 6616037 |  50.5 | 104655852 | 798.5 | 130619277 | 996.6 |\n\n",
+            "text/latex": "A matrix: 2 × 6 of type dbl\n\\begin{tabular}{r|llllll}\n  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n\\hline\n\tNcells & 2742604 & 146.5 &   5409494 & 288.9 &   5409494 & 288.9\\\\\n\tVcells & 6616037 &  50.5 & 104655852 & 798.5 & 130619277 & 996.6\\\\\n\\end{tabular}\n",
             "text/plain": [
-              "       used     (Mb)  gc trigger (Mb)  max used  (Mb)  \n",
-              "Ncells  2678684 143.1   6915854  369.4   6915854  369.4\n",
-              "Vcells 26151489 199.6 124099104  946.9 153060810 1167.8"
+              "       used    (Mb)  gc trigger (Mb)  max used  (Mb) \n",
+              "Ncells 2742604 146.5   5409494  288.9   5409494 288.9\n",
+              "Vcells 6616037  50.5 104655852  798.5 130619277 996.6"
             ]
           },
           "metadata": {}
@@ -311,7 +311,7 @@
         "id": "atmIUEUNUrK5"
       },
       "id": "atmIUEUNUrK5",
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -332,13 +332,13 @@
         "PARAM <- list()\n",
         "PARAM$semilla_primigenia <- 666559\n",
         "\n",
-        "PARAM$experimento <- 6400\n",
+        "PARAM$experimento <- 6605\n",
         "PARAM$dataset <- \"gerencial_competencia_2025.csv.gz\""
       ],
       "metadata": {
         "id": "peRH7ySLCPRV"
       },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": [],
       "id": "peRH7ySLCPRV"
     },
@@ -365,7 +365,7 @@
       "metadata": {
         "id": "1gZD6ZMvCPRV"
       },
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": [],
       "id": "1gZD6ZMvCPRV"
     },
@@ -398,7 +398,7 @@
       "metadata": {
         "id": "Xi0emX2ECPRV"
       },
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": [],
       "id": "Xi0emX2ECPRV"
     },
@@ -445,7 +445,7 @@
         "id": "sTmliO_FXv9E"
       },
       "id": "sTmliO_FXv9E",
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -469,7 +469,7 @@
         "id": "L85A2lwKSe3k"
       },
       "id": "L85A2lwKSe3k",
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -508,7 +508,7 @@
         "id": "qrqf3j3_St3p"
       },
       "id": "qrqf3j3_St3p",
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -523,10 +523,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 86
         },
-        "outputId": "e24f683d-66d8-4f4b-f916-e833da3ed12b"
+        "outputId": "bd96dc1e-e5c0-4e43-fd1d-645c3f61d1eb"
       },
       "id": "iC4viwOdY5Kp",
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "display_data",
@@ -586,7 +586,7 @@
         "id": "ljA3h0jOcciP"
       },
       "id": "ljA3h0jOcciP",
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -621,7 +621,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "id": "7850b948-827d-4a2a-b4d3-a5e459b47c11",
       "metadata": {
         "id": "7850b948-827d-4a2a-b4d3-a5e459b47c11"
@@ -672,7 +672,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "id": "f772896b-595a-47d4-8905-c15304ac9452",
       "metadata": {
         "id": "f772896b-595a-47d4-8905-c15304ac9452",
@@ -680,7 +680,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 416
         },
-        "outputId": "c164a7ec-3803-437a-86fe-4b00eb1e396f"
+        "outputId": "68e29b9f-9d64-468f-b22c-f246320d48e5"
       },
       "outputs": [
         {
@@ -821,7 +821,7 @@
         "id": "QrmnPtlBcEgx"
       },
       "id": "QrmnPtlBcEgx",
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -871,7 +871,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "id": "2c9c0a42-ba58-4264-8566-091a6161716f",
       "metadata": {
         "id": "2c9c0a42-ba58-4264-8566-091a6161716f"
@@ -902,7 +902,7 @@
         "id": "tv_trHWAj4a8"
       },
       "id": "tv_trHWAj4a8",
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -917,7 +917,7 @@
         "id": "Ud_XDKSIj8f_"
       },
       "id": "Ud_XDKSIj8f_",
-      "execution_count": null,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -947,7 +947,7 @@
         "id": "rFKgZZPSj_Pa"
       },
       "id": "rFKgZZPSj_Pa",
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -968,10 +968,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "c8f8b83f-ade1-4a9f-ca0e-1aa110e2baa5"
+        "outputId": "a9ce349b-a68a-4c5f-e288-7a138a5d90e4"
       },
       "id": "B3yo98kQkHcP",
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1070,7 +1070,7 @@
         "id": "34V6y4GetKq_"
       },
       "id": "34V6y4GetKq_",
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -1116,7 +1116,7 @@
         "id": "5Uag3XGHqrfZ"
       },
       "id": "5Uag3XGHqrfZ",
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -1131,7 +1131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "id": "2c10f535-8d90-47d1-ac3d-9b4c24ec21d2",
       "metadata": {
         "id": "2c10f535-8d90-47d1-ac3d-9b4c24ec21d2"
@@ -1185,7 +1185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "id": "43c2a92d-1041-46b8-bff2-47297f209ed2",
       "metadata": {
         "id": "43c2a92d-1041-46b8-bff2-47297f209ed2"
@@ -1244,7 +1244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "id": "1f8cab3f-c7e2-4802-bfd1-5ad509922a4e",
       "metadata": {
         "scrolled": true,
@@ -1252,7 +1252,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0dd3fc02-5925-4175-c3e9-4083031d98ca"
+        "outputId": "b83fd0d5-46b3-4c44-cbdc-3e2dd43b63b0"
       },
       "outputs": [
         {
@@ -1286,14 +1286,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "id": "8c061a2a-3341-4006-a154-c95bb6cfd407",
       "metadata": {
         "id": "8c061a2a-3341-4006-a154-c95bb6cfd407",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "39292bda-7020-47ef-f4fa-fbd3b8180de0"
+        "outputId": "0f131d1a-cc5d-4bb8-f6dc-6188735d93f7"
       },
       "outputs": [
         {
@@ -1302,7 +1302,7 @@
           "text": [
             "   num_leaves min_data_in_leaf num_iterations\n",
             "        <int>            <int>          <int>\n",
-            "1:        191                2            291\n"
+            "1:         60              584            616\n"
           ]
         }
       ],
@@ -1393,10 +1393,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "bdeaebf5-bde8-48ab-b7de-121d6b8d5bd1"
+        "outputId": "49752c3e-2f10-4970-9d1e-1d1503300dc6"
       },
       "id": "qyHfS_X0zd7o",
-      "execution_count": null,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1426,7 +1426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "id": "d6b9f33c-e0a0-4ea6-8169-4a6180cc5d01",
       "metadata": {
         "id": "d6b9f33c-e0a0-4ea6-8169-4a6180cc5d01"
@@ -1457,7 +1457,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "id": "fa239848-1c28-4ee5-984a-073903b4b279",
       "metadata": {
         "id": "fa239848-1c28-4ee5-984a-073903b4b279"
@@ -1482,7 +1482,7 @@
         "id": "RC1ju-5MZN5s"
       },
       "id": "RC1ju-5MZN5s",
-      "execution_count": null,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -1502,7 +1502,7 @@
         "id": "VEpv4RYOZHTU"
       },
       "id": "VEpv4RYOZHTU",
-      "execution_count": null,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -1536,12 +1536,12 @@
         "id": "eJ7RbT271v-R"
       },
       "id": "eJ7RbT271v-R",
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "id": "88ca61c8-fa24-4ce5-8be1-323aca018e8f",
       "metadata": {
         "id": "88ca61c8-fa24-4ce5-8be1-323aca018e8f"
@@ -1583,7 +1583,7 @@
         "id": "TB6aerGDZeTo"
       },
       "id": "TB6aerGDZeTo",
-      "execution_count": null,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -1613,14 +1613,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 72,
       "id": "e5fa2439-b0e9-49e0-a861-71d7315d6e1c",
       "metadata": {
         "id": "e5fa2439-b0e9-49e0-a861-71d7315d6e1c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ba91ebc8-4104-45b1-fa79-ecaedc795e65"
+        "outputId": "084030ee-c031-4f4f-fa53-fcd64f92aed9"
       },
       "outputs": [
         {
@@ -1666,7 +1666,7 @@
         "  tb_prediccion[, Predicted := 0L] # seteo inicial a 0\n",
         "  tb_prediccion[1:envios, Predicted := 1L] # marclo los primeros\n",
         "\n",
-        "  archivo_kaggle <- paste0(\"./kaggle/KA_05_\", PARAM$experimento, \"_\", envios, \".csv\")\n",
+        "  archivo_kaggle <- paste0(\"./kaggle/KA_001B_\", PARAM$experimento, \"_\", envios, \".csv\")\n",
         "\n",
         "  # grabo el archivo\n",
         "  fwrite(tb_prediccion[, list(numero_de_cliente, Predicted)],\n",
@@ -1703,12 +1703,12 @@
         "id": "C94tK-xid6p2"
       },
       "id": "C94tK-xid6p2",
-      "execution_count": null,
+      "execution_count": 73,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 74,
       "id": "1b615a62-20cc-4e95-9af2-6b6db38d5efb",
       "metadata": {
         "id": "1b615a62-20cc-4e95-9af2-6b6db38d5efb",
@@ -1716,19 +1716,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "3790650d-b75e-4995-b525-65fca28e6ee3"
+        "outputId": "a579d540-ab54-4fbc-cb6f-b11251288b01"
       },
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "'Tue Nov 18 06:26:35 PM 2025'"
+              "'Thu Nov 20 12:47:55 PM 2025'"
             ],
-            "text/markdown": "'Tue Nov 18 06:26:35 PM 2025'",
-            "text/latex": "'Tue Nov 18 06:26:35 PM 2025'",
+            "text/markdown": "'Thu Nov 20 12:47:55 PM 2025'",
+            "text/latex": "'Thu Nov 20 12:47:55 PM 2025'",
             "text/plain": [
-              "[1] \"Tue Nov 18 06:26:35 PM 2025\""
+              "[1] \"Thu Nov 20 12:47:55 PM 2025\""
             ]
           },
           "metadata": {}
