Se creó con Colab

--- a/src/workflows/610_005.ipynb
+++ b/src/workflows/610_005.ipynb
@@ -330,9 +330,9 @@
       "cell_type": "code",
       "source": [
         "PARAM <- list()\n",
-        "PARAM$semilla_primigenia <- 666559\n",
+        "PARAM$semilla_primigenia <- 533317\n",
         "\n",
-        "PARAM$experimento <- 6605\n",
+        "PARAM$experimento <- 6700\n",
         "PARAM$dataset <- \"gerencial_competencia_2025.csv.gz\""
       ],
       "metadata": {
@@ -1666,7 +1666,7 @@
         "  tb_prediccion[, Predicted := 0L] # seteo inicial a 0\n",
         "  tb_prediccion[1:envios, Predicted := 1L] # marclo los primeros\n",
         "\n",
-        "  archivo_kaggle <- paste0(\"./kaggle/KA_001B_\", PARAM$experimento, \"_\", envios, \".csv\")\n",
+        "  archivo_kaggle <- paste0(\"./kaggle/KA_005_\", PARAM$experimento, \"_\", envios, \".csv\")\n",
         "\n",
         "  # grabo el archivo\n",
         "  fwrite(tb_prediccion[, list(numero_de_cliente, Predicted)],\n",
