--- a/src/Submit_Final_Gerencial/Gerencial_Final_21.ipynb
+++ b/src/Submit_Final_Gerencial/Gerencial_Final_21.ipynb
@@ -45,7 +45,7 @@
         "outputId": "ee54667f-1d2b-41e5-ccb2-2e735d895f1a"
       },
       "id": "-mX__v-CdXmb",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,7 +112,7 @@
         "outputId": "f8e1b435-fc4e-4d15-a9f4-68d05b168991"
       },
       "id": "HecOxwKgdgIg",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "EL8wdHaUs59K",
       "metadata": {
         "id": "EL8wdHaUs59K",
@@ -191,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "1iE0U4_WCPRT",
       "metadata": {
         "id": "1iE0U4_WCPRT",
@@ -239,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "atmIUEUNUrK5",
       "metadata": {
         "id": "atmIUEUNUrK5",
@@ -335,7 +335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "peRH7ySLCPRV",
       "metadata": {
         "id": "peRH7ySLCPRV",
@@ -364,7 +364,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "1gZD6ZMvCPRV",
       "metadata": {
         "id": "1gZD6ZMvCPRV",
@@ -404,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "Xi0emX2ECPRV",
       "metadata": {
         "id": "Xi0emX2ECPRV",
@@ -449,7 +449,7 @@
         "id": "bH2usWW2U7Sf"
       },
       "id": "bH2usWW2U7Sf",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -467,7 +467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "XXPLxqc1ShLN",
       "metadata": {
         "id": "XXPLxqc1ShLN",
@@ -487,7 +487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "sjjUe3waSh8D",
       "metadata": {
         "id": "sjjUe3waSh8D",
@@ -536,7 +536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "RSF9i9nyWwKs",
       "metadata": {
         "id": "RSF9i9nyWwKs",
@@ -623,7 +623,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "oq2zlvpkSmAU",
       "metadata": {
         "id": "oq2zlvpkSmAU",
@@ -648,7 +648,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "h2QbqSn8Sojj",
       "metadata": {
         "id": "h2QbqSn8Sojj",
@@ -673,7 +673,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "DMTgpq9VSqqM",
       "metadata": {
         "id": "DMTgpq9VSqqM",
@@ -698,7 +698,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "7n171_BoStAj",
       "metadata": {
         "id": "7n171_BoStAj",
@@ -723,7 +723,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "Z94UizNySv0m",
       "metadata": {
         "id": "Z94UizNySv0m",
@@ -749,7 +749,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "GnbUIXeWSyQm",
       "metadata": {
         "id": "GnbUIXeWSyQm",
@@ -784,7 +784,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "dhlyk-WxS040",
       "metadata": {
         "id": "dhlyk-WxS040",
@@ -812,7 +812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "tlJjlN6PVanz",
       "metadata": {
         "id": "tlJjlN6PVanz",
@@ -864,7 +864,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "G_8BH82XS3uV",
       "metadata": {
         "id": "G_8BH82XS3uV",
@@ -907,7 +907,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "-efBawbTWPKc",
       "metadata": {
         "id": "-efBawbTWPKc",
@@ -974,7 +974,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "g_UYTueTagt4",
       "metadata": {
         "id": "g_UYTueTagt4",
@@ -1018,7 +1018,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "qrqf3j3_St3p",
       "metadata": {
         "id": "qrqf3j3_St3p",
@@ -1040,7 +1040,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "zjV20uzYaXVK",
       "metadata": {
         "id": "zjV20uzYaXVK",
@@ -1317,7 +1317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "qGxBfj3qa5LS",
       "metadata": {
         "id": "qGxBfj3qa5LS",
@@ -1350,7 +1350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "iC4viwOdY5Kp",
       "metadata": {
         "id": "iC4viwOdY5Kp",
@@ -1460,7 +1460,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "7ojmYMB4q9WK",
       "metadata": {
         "id": "7ojmYMB4q9WK",
@@ -1489,7 +1489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "nNSBhC7_rQ8B",
       "metadata": {
         "id": "nNSBhC7_rQ8B",
@@ -1580,7 +1580,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "CLglpZ1zrRvj",
       "metadata": {
         "id": "CLglpZ1zrRvj",
@@ -1664,7 +1664,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "Q8WZFUvkmdmV",
       "metadata": {
         "id": "Q8WZFUvkmdmV",
@@ -1710,7 +1710,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "SDRCLwCMsC70",
       "metadata": {
         "id": "SDRCLwCMsC70",
@@ -1733,7 +1733,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "MunPUc8ur0lY",
       "metadata": {
         "id": "MunPUc8ur0lY",
@@ -1773,7 +1773,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "RBcqLABAmdmW",
       "metadata": {
         "id": "RBcqLABAmdmW",
@@ -1966,7 +1966,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "Vd09ZaybfUeK",
       "metadata": {
         "id": "Vd09ZaybfUeK",
@@ -2002,7 +2002,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "id": "JrsaXcQqcefM",
       "metadata": {
         "id": "JrsaXcQqcefM",
@@ -2105,7 +2105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "id": "i6vcLtXldMpz",
       "metadata": {
         "id": "i6vcLtXldMpz",
@@ -2171,7 +2171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "GTTj4VdBezcE",
       "metadata": {
         "id": "GTTj4VdBezcE",
@@ -2268,7 +2268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "id": "bs2vXYFuiXGu",
       "metadata": {
         "id": "bs2vXYFuiXGu",
@@ -2642,7 +2642,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "id": "Ge8rC8iT3bxV",
       "metadata": {
         "id": "Ge8rC8iT3bxV",
@@ -2683,7 +2683,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "id": "bE-g1G6WyqCS",
       "metadata": {
         "id": "bE-g1G6WyqCS",
@@ -2820,7 +2820,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "id": "nrU5TvRozeQ6",
       "metadata": {
         "id": "nrU5TvRozeQ6",
@@ -2848,7 +2848,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "id": "2EHaQVqZ1Bum",
       "metadata": {
         "id": "2EHaQVqZ1Bum",
@@ -2881,7 +2881,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "id": "aY89fquP542d",
       "metadata": {
         "id": "aY89fquP542d",
@@ -2901,7 +2901,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "id": "qlSs7nBt1SGq",
       "metadata": {
         "id": "qlSs7nBt1SGq",
@@ -3080,7 +3080,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "id": "2c9c0a42-ba58-4264-8566-091a6161716f",
       "metadata": {
         "id": "2c9c0a42-ba58-4264-8566-091a6161716f",
@@ -3109,7 +3109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "id": "tv_trHWAj4a8",
       "metadata": {
         "id": "tv_trHWAj4a8",
@@ -3125,7 +3125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "id": "Ud_XDKSIj8f_",
       "metadata": {
         "id": "Ud_XDKSIj8f_",
@@ -3143,7 +3143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "id": "rFKgZZPSj_Pa",
       "metadata": {
         "id": "rFKgZZPSj_Pa",
@@ -3179,9 +3179,7 @@
         "    (clase_ternaria %in% c(\"BAJA+1\", \"BAJA+2\") |\n",
         "     azar < PARAM$trainingstrategy$training_pct ) ]\n",
         "\n",
-        "# ========================================\n",
         "# ESTRATEGIA DE PESOS POR AÑO (OPTIMIZACIÓN BAYESIANA)\n",
-        "# ========================================\n",
         "# Extraer el año de foto_mes\n",
         "dataset[, anio := as.integer(substr(as.character(foto_mes), 1, 4))]\n",
         "\n",
@@ -3201,17 +3199,15 @@
         "dtrain <- lgb.Dataset(\n",
         "  data= data.matrix(dataset[fold_train == TRUE, campos_buenos, with = FALSE]),\n",
         "  label= dataset[fold_train == TRUE, clase01],\n",
-        "  weight= dataset[fold_train == TRUE, peso_norm],  # Agrego los pesos aquí <------------------\n",
+        "  weight= dataset[fold_train == TRUE, peso_norm],\n",
         "  free_raw_data= TRUE\n",
         ")\n",
-        "\n",
-        "# ========================================\n",
-        "# ========================================"
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "id": "B3yo98kQkHcP",
       "metadata": {
         "id": "B3yo98kQkHcP",
@@ -3320,7 +3316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "id": "34V6y4GetKq_",
       "metadata": {
         "id": "34V6y4GetKq_",
@@ -3432,7 +3428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "id": "5Uag3XGHqrfZ",
       "metadata": {
         "id": "5Uag3XGHqrfZ",
@@ -3497,7 +3493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "id": "ysYzPjs3CT_a",
       "metadata": {
         "id": "ysYzPjs3CT_a",
@@ -3531,7 +3527,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "id": "2c10f535-8d90-47d1-ac3d-9b4c24ec21d2",
       "metadata": {
         "id": "2c10f535-8d90-47d1-ac3d-9b4c24ec21d2",
@@ -3609,7 +3605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "id": "43c2a92d-1041-46b8-bff2-47297f209ed2",
       "metadata": {
         "id": "43c2a92d-1041-46b8-bff2-47297f209ed2",
@@ -3671,7 +3667,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "id": "1f8cab3f-c7e2-4802-bfd1-5ad509922a4e",
       "metadata": {
         "id": "1f8cab3f-c7e2-4802-bfd1-5ad509922a4e",
@@ -3716,7 +3712,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "id": "8c061a2a-3341-4006-a154-c95bb6cfd407",
       "metadata": {
         "id": "8c061a2a-3341-4006-a154-c95bb6cfd407",
@@ -3806,7 +3802,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "id": "qyHfS_X0zd7o",
       "metadata": {
         "id": "qyHfS_X0zd7o",
@@ -3855,9 +3851,8 @@
         ")\n",
         "\n",
         "dataset[, fold_final_train := foto_mes %in% PARAM$trainingstrategy$final_train ]\n",
-        "# ========================================\n",
+        "\n",
         "# ESTRATEGIA DE PESOS POR AÑO\n",
-        "# ========================================\n",
         "# Verificar si ya existe la columna peso_norm, si no, crearla\n",
         "if (!(\"peso_norm\" %in% colnames(dataset))) {\n",
         "  # Extraer el año de foto_mes\n",
@@ -3878,14 +3873,12 @@
         "dfinal_train <- lgb.Dataset(\n",
         "  data= data.matrix(dataset[fold_final_train == TRUE, campos_buenos, with= FALSE]),\n",
         "  label= dataset[fold_final_train == TRUE, clase01],\n",
-        "  weight= dataset[fold_final_train == TRUE, peso_norm],  # Agrego los pesos aquí <------------------\n",
+        "  weight= dataset[fold_final_train == TRUE, peso_norm],\n",
         "  free_raw_data= TRUE\n",
         ")\n",
         "\n",
         "\n",
-        "nrow( dfinal_train) # verifico el tamaño\n",
-        "# ========================================\n",
-        "# ========================================"
+        "nrow( dfinal_train) # verifico el tamaño\n"
       ]
     },
     {
@@ -3900,7 +3893,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "id": "d6b9f33c-e0a0-4ea6-8169-4a6180cc5d01",
       "metadata": {
         "id": "d6b9f33c-e0a0-4ea6-8169-4a6180cc5d01",
@@ -3943,7 +3936,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "id": "5Y2WIAWbYc1C",
       "metadata": {
         "id": "5Y2WIAWbYc1C",
@@ -4138,7 +4131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "id": "HhvnAhuxdXWq",
       "metadata": {
         "id": "HhvnAhuxdXWq",
@@ -4153,7 +4146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "id": "tcYH_MiJdeEs",
       "metadata": {
         "id": "tcYH_MiJdeEs",
@@ -4189,7 +4182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "id": "weEzmJf5fiog",
       "metadata": {
         "id": "weEzmJf5fiog",
@@ -4221,7 +4214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "id": "fa239848-1c28-4ee5-984a-073903b4b279",
       "metadata": {
         "id": "fa239848-1c28-4ee5-984a-073903b4b279",
@@ -4289,7 +4282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "id": "eJ7RbT271v-R",
       "metadata": {
         "id": "eJ7RbT271v-R",
@@ -4306,7 +4299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "id": "88ca61c8-fa24-4ce5-8be1-323aca018e8f",
       "metadata": {
         "id": "88ca61c8-fa24-4ce5-8be1-323aca018e8f",
@@ -4382,7 +4375,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "id": "Q10qYVKNqqte",
       "metadata": {
         "id": "Q10qYVKNqqte",
@@ -4734,7 +4727,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "id": "TB6aerGDZeTo",
       "metadata": {
         "id": "TB6aerGDZeTo",
@@ -4775,7 +4768,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "id": "e5fa2439-b0e9-49e0-a861-71d7315d6e1c",
       "metadata": {
         "id": "e5fa2439-b0e9-49e0-a861-71d7315d6e1c",
@@ -4857,7 +4850,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "id": "C94tK-xid6p2",
       "metadata": {
         "id": "C94tK-xid6p2",
@@ -4889,7 +4882,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "id": "1b615a62-20cc-4e95-9af2-6b6db38d5efb",
       "metadata": {
         "id": "1b615a62-20cc-4e95-9af2-6b6db38d5efb",
