Se creó con Colab

--- a/src/Submit_Final_Gerencial/Gerencial_Final_21.ipynb
+++ b/src/Submit_Final_Gerencial/Gerencial_Final_21.ipynb
@@ -22,6 +22,48 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "### 6.1 Objetivo"
+      ],
+      "metadata": {
+        "id": "CwHUh-dKi2MW"
+      },
+      "id": "CwHUh-dKi2MW"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Presentar un workflow/pipeline completo al que los estudiantes deberán enriquecer"
+      ],
+      "metadata": {
+        "id": "qkTn7kTZi58G"
+      },
+      "id": "qkTn7kTZi58G"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Esta parte se debe correr con el runtime en Python3\n",
+        "<br>Ir al menu, Runtime -> Change Runtime Type -> Runtime type -> Python 3"
+      ],
+      "metadata": {
+        "id": "m8eGG7dii7bC"
+      },
+      "id": "m8eGG7dii7bC"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Conectar la virtual machine donde esta corriendo Google Colab con el  Google Drive, para poder tener persistencia de archivos\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "GT9Fv_TEjEZR"
+      },
+      "id": "GT9Fv_TEjEZR"
+    },
+    {
+      "cell_type": "markdown",
       "id": "29c586e3-ed7d-44b2-92a0-f19669f06940",
       "metadata": {
         "id": "29c586e3-ed7d-44b2-92a0-f19669f06940"
@@ -55,6 +97,22 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Para correr la siguiente celda es fundamental en Arranque en Frio haber copiado el archivo kaggle.json al Google Drive, en la carpeta indicada en el instructivo\n",
+        "\n",
+        "<br>los siguientes comando estan en shell script de Linux\n",
+        "*   Crear las carpetas en el Google Drive\n",
+        "*   \"instalar\" el archivo kaggle.json desde el Google Drive a la virtual machine para que pueda ser utilizado por la libreria  kaggle de Python\n",
+        "*   Bajar el  **dataset_pequeno**  al  Google Drive  y tambien al disco local de la virtual machine que esta corriendo Google Colab\n",
+        "*   Bajar el **dataset_historico** al Google Drive y tambien al disco local de la virtual machine que esta corriendo Google Colab"
+      ],
+      "metadata": {
+        "id": "awo1lTvcjMqW"
+      },
+      "id": "awo1lTvcjMqW"
     },
     {
       "cell_type": "code",
@@ -131,7 +189,7 @@
         "id": "oSKhZRToy2F7"
       },
       "source": [
-        "## 9.7  Workflow"
+        "## 6.3  Workflow"
       ]
     },
     {
@@ -389,7 +447,7 @@
         "id": "YVKBfLtkR8SO"
       },
       "source": [
-        "### 9.7.1   Preprocesamiento del dataset"
+        "### 6.3.1   Preprocesamiento del dataset"
       ]
     },
     {
@@ -399,7 +457,7 @@
         "id": "cr3K0RPVRjq6"
       },
       "source": [
-        "#### 9.7.1.1  DT dataset gerencial"
+        "#### 6.3.1.1  DT incorporar dataset"
       ]
     },
     {
@@ -459,7 +517,7 @@
         "id": "-4NiANYFSYHG"
       },
       "source": [
-        "#### 9.7.1.3  DR  Data Drifting\n",
+        "#### 6.3.1.3  DR  Data Drifting\n",
         "Se intenta corregir el data drifting, ajustando por algunos indices financieros. Utilizo Data Drifting de codigo de Analista Senior usando data set gerencial\n",
         "\n",
         "Ajusto cantidad de meses a data set gerencial y vectores correspondientes de IPC, dolar blue, oficial y UVA"
@@ -967,7 +1025,7 @@
         "id": "7sppIDYeSn5X"
       },
       "source": [
-        "#### 9.7.1.3  FE_intra_manual Feature Engineering intra-mes\n",
+        "#### 6.3.1.3  FE_intra_manual Feature Engineering intra-mes\n",
         "\n",
         "Agrego campos nuevos dentro del mismo mes, SIN considerar la historia. Aplico codigo de analista Senior usando data set gerencial."
       ]
@@ -1433,7 +1491,7 @@
         "id": "0nrwNrVEmdmF"
       },
       "source": [
-        "#### 9.7.1.4  FEhist Feature Engineering historico\n",
+        "#### 6.3.1.4  FEhist Feature Engineering historico\n",
         "\n",
         "El Fature Engineering Histórico es la etapa que más aporta a la ganancia final, ya que enriquece cada registro del dataset con su historia."
       ]
@@ -2615,7 +2673,7 @@
         "id": "l8mKij0XaDY0"
       },
       "source": [
-        "#### 9.7.1.6  FEhist Reduccion dimensionalidad con canaritos\n",
+        "# #### 6.3.1.6  FEhist Reduccion dimensionalidad con canaritos\n",
         "\n",
         "Esta etapa solo se mostrará a la *modalidad Anlista Sr*"
       ]
@@ -3042,7 +3100,7 @@
         "id": "cf91ea5e-3341-4afb-8d05-cc4923d3d1e1"
       },
       "source": [
-        "### 9.7.2 Modelado"
+        "### 6.3.2 Modelado"
       ]
     },
     {
@@ -3052,7 +3110,7 @@
         "id": "526048e4-8cf2-4023-bd2d-a70e4e9ff157"
       },
       "source": [
-        "#### 9.7.2.1 Training Strategy\n"
+        "#### 6.3.2.1 Training Strategy\n"
       ]
     },
     {
@@ -3254,7 +3312,7 @@
         "id": "28e8f788-551c-4e50-9029-302ac0834287"
       },
       "source": [
-        "####  9.7.2.2. Hyperparameter Tuning"
+        "#### 6.3.2.2. Hyperparameter Tuning"
       ]
     },
     {
@@ -3769,7 +3827,7 @@
         "id": "ddb554cb-1d96-4f6b-ae1c-c9a076f8dbdc"
       },
       "source": [
-        "### 9.7.3 Produccion"
+        "### 6.3.3 Produccion"
       ]
     },
     {
@@ -3878,7 +3936,7 @@
         ")\n",
         "\n",
         "\n",
-        "nrow( dfinal_train) # verifico el tamaño\n"
+        "nrow( dfinal_train) # verifico el tamaño"
       ]
     },
     {
